apps/nginx-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    toolkit.fluxcd.io/tenant: self
